# rustnewbie

euler/: Cargo.toml  ex1.rs  ex12.rs  ex2.rs  ex3.rs  ex4.rs  ex5.rs  ex7.rs  ex8.rs
euler/src/: ex10.rs  ex11.rs  ex12.rs  ex13.rs  ex14.rs  ex15.rs  ex16.rs  ex17.rs  ex18.rs  ex3.rs  ex6.rs  ex7.rs  ex9.rs
